Mutants/Mutant_1/report.txt
Mutants\Mutant_1\calculator\Calculator.java:11: error: bad operand types for binary operator '*'
        System.out.println(s*"="+calculate(s));
                            ^
  first type:  String
  second type: String
1 error
Compilation Failed, Mutant killed by the compiler
